opam-version: "1.2"
name: "profiler-experiments"
version: "0.0.0"
maintainer: "Patrick Stapfer <ryyppy@users.noreply.github.com>"
authors: "Patrick Stapfer <ryyppy@users.noreply.github.com>"
license: "MIT"
build: [
  [make]
]
install: [make "install"]
remove: ["ocamlfind" "remove" "nextjournal-ocaml"]
depends: [
  "jbuilder" {build & >= "1.0+beta20"}
  "ocamlfind" {build}
  "flow_parser" {= "0.62.0"}
  "yojson" {>= "1.3.3"}
]
